# batteringram

./: .gitmodules  license.txt  readme.md
ddr4-interposer/: .gitignore  dimm-conn.kicad_sch  fault-injector.kicad_pcb  fault-injector.kicad_prl  fault-injector.kicad_pro  fault-injector.kicad_sch  fp-lib-table  interposer.kicad_sch  mobo-conn.kicad_sch  one-to-one-conns.kicad_sch
ddr4-interposer/badram.pretty/: Jumper_0402_bridged.kicad_mod  RPi_Pico_SMD_TH.kicad_mod  ddr4-edge-conn-female-badram.kicad_mod
interposer-control/: CMakeLists.txt  main.c  readme.md
scalable-sgx-attacks/: readme.md
scalable-sgx-attacks/patches/: linux-sgx-driver-lepubkeyhash.patch  linux-sgx-driver-vm_flags_set.patch  linux-sgx-driver.patch  readme.md  sgx-step.patch
scalable-sgx-attacks/pce/: .gitignore  Makefile  gen_pck.py  generate_report.c  main.c  readme.md
scalable-sgx-attacks/pce/Enclave/: Makefile  encl.c  encl.config.xml  encl.edl
scalable-sgx-attacks/pce/attacker-enclave-alias/: Makefile  README.md  main.c
scalable-sgx-attacks/pce/attacker-enclave-alias/Enclave/: Makefile  (+2 more)
scalable-sgx-attacks/pce/attacker-enclave-read/: Makefile  README.md  main.c
scalable-sgx-attacks/simple-read/: readme.md
scalable-sgx-attacks/simple-read/attacker-enclave-alias/: Makefile  main.c
scalable-sgx-attacks/simple-read/attacker-enclave-read/: main.c
scalable-sgx-attacks/simple-read/victim-enclave/: main.c
scalable-sgx-attacks/simple-replay/: readme.md
scalable-sgx-attacks/simple-replay/attacker-enclave/: main.c
scalable-sgx-attacks/simple-replay/victim-enclave/: main.c
(+7 files in other folders)
